# laymansguide-src

./: .gitignore  .gitmodules  README.md  issues_v4.json  main.py  metadata.csv  pelicanconf.py  pyproject.toml  replit.nix  scrape.py
indexes/: index1.html  index2.html  index3.html  index4.html
issue000/: issue000.md
issue001/: issue001.md
issue002/: issue002.md
issue003/: issue003.md
issue004/: issue004.md
issue005/: issue005.md
issue006/: issue006.md
issue007/: issue007.md
issue008/: issue008.md
issue009/: issue009.md
issue010/: issue010.md
issue011/: .fuse_hidden00046818000001cd  issue011.md
issue012/: issue012.md
issue013/: issue013.md
output/: archives.html  authors.html  categories.html  index.html  issue000.html  issue001.html  issue002.html  issue003.html  issue004.html  issue005.html  issue006.html  issue007.html  issue008.html  issue009.html  issue010.html  issue011.html  issue012.html  issue013.html  issue014.html  issue015.html  issue016.html  issue017.html  issue018.html  issue019.html  issue020.html  issue021.html  issue022.html  issue023.html  issue024.html  issue025.html  issue026.html  issue027.html  issue028.html  issue029.html  issue030.html  issue031.html  issue032.html  issue033.html  issue034.html  issue035.html  (+135 more)
output/author/: j-s-ng.html
output/category/: season-01.html  season-02.html  season-03.html  season-04.html  season-05.html  season-06.html  season-07.html  season-08.html  season-09.html  season-10.html  season-11.html  season-12.html  season-13.html
output/tag/: app.html  cache.html  compression.html  (+5 more)
(+553 files in other folders)
